Add basic routes for plugin
